--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,10 @@ migrate_working_dir/
 **/doc/api/
 .dart_tool/
 build/
+
+example/android/
+example/ios/
+example/linux/
+example/macos/
+example/web/
+example/windows/
