--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,17 @@
 name: thicken
-description: "A new Flutter package project."
-version: 0.0.1
-homepage:
+description: A widget that creates a thick visual effect by stacking multiple layers of a given child widget with slight translations based on the thickness value.
+version: 1.0.0
+homepage: https://inidia.app
+repository: https://github.com/Nialixus/thicken.git
+issue_tracker: https://github.com/Nialixus/thicken/issues
+funding:
+  - https://ko-fi.com/nialixus
+screenshots:
+  - description: "Thicken Logo"
+    path: logo.png
+topics:
+  - utility
+  - animation
 
 environment:
   sdk: '>=3.4.4 <4.0.0'
@@ -15,40 +25,3 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^3.0.0
-
-# For information on the generic Dart part of this file, see the
-# following page: https://dart.dev/tools/pub/pubspec
-
-# The following section is specific to Flutter packages.
-flutter:
-
-  # To add assets to your package, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
-  #
-  # For details regarding assets in packages, see
-  # https://flutter.dev/assets-and-images/#from-packages
-  #
-  # An image asset can refer to one or more resolution-specific "variants", see
-  # https://flutter.dev/assets-and-images/#resolution-aware
-
-  # To add custom fonts to your package, add a fonts section here,
-  # in this "flutter" section. Each entry in this list should have a
-  # "family" key with the font family name, and a "fonts" key with a
-  # list giving the asset and other descriptors for the font. For
-  # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
-  # For details regarding fonts in packages, see
-  # https://flutter.dev/custom-fonts/#from-packages
