--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: thicken
 description: A widget that creates a thick visual effect by stacking multiple layers of a given child widget with slight translations based on the thickness value.
-version: 1.1.2
+version: 1.1.3
 homepage: https://inidia.app
 repository: https://github.com/Nialixus/thicken.git
 issue_tracker: https://github.com/Nialixus/thicken/issues
@@ -11,7 +11,7 @@ screenshots:
     path: logo.png
 topics:
   - utility
-  - animation
+  - widget
 
 environment:
   sdk: '>=3.4.4 <4.0.0'
